--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,7 @@
 PORT=4000
+
+# // Kubernetes deployment
+MONGO_URI=mongodb://mongo-service:27017/dockerize-backend
+
+# // Docker compose
 MONGO_URI=mongodb://mongo:27017/dockerize-backend
