--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,5 +1,4 @@
 FROM node:18-alpine
-
 WORKDIR /app
 
 COPY package*.json ./
@@ -8,8 +7,8 @@ RUN npm i
 
 COPY . /app
 
-RUN npm run build
+ENV NODE_ENV=development
 
 EXPOSE 3000
 
-CMD [ "npm", "start" ]
+CMD [ "npm", "run", "dev" ]
