--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@ PORT=4000
 MONGO_URI=mongodb://mongo-service:27017/dockerize-backend
 
 # // Docker compose
-MONGO_URI=mongodb://mongo:27017/dockerize-backend
+# MONGO_URI=mongodb://mongo:27017/dockerize-backend
