--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,6 @@
-# //Kubernetes deployment
-NEXT_PUBLIC_SERVER_URL=http://backend-app-service:4000
 
 # //Docker compose
-NEXT_PUBLIC_SERVER_URL=http://backend:4000
+# NEXT_PUBLIC_SERVER_URL=http://backend:4000
+
+# // kubernetes 
+NEXT_PUBLIC_SERVER_URL=http://backend-app-service:4000
