--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,36 @@
-FROM node:18-alpine
+FROM node:18-alpine AS base
+
+FROM base AS deps
+RUN apk add --no-cache libc6-compat
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json  ./
+RUN yarn
 
-RUN npm i
-
-COPY . /app
-
+FROM base AS builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
 RUN npm run build
+
+FROM base AS runner
+WORKDIR /app
+
+ENV NODE_ENV=production
+
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nextjs -u 1001
+
+COPY --from=builder /app/public ./public
+
+
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+
+
+USER nextjs
 
 EXPOSE 3000
 
-CMD [ "npm", "start" ]
+CMD ["node", "server.js"]
